examples/fail/semantic/unknown_field.bina
// EXPECT_SEMANTIC_ERROR: has no field
struct Point {
    pub x: int32;
}

fn main() -> int {
    let p = Point { x: 1 };
    return p.y;
}
